# interesting

./: CMakeLists.txt  README.adoc
.github/workflows/: cmake-multi-platform.yml
cmake/: config.ini
pages/: 404.html  index.html  name.html  neng.html
src/: baseserver.c  baseserver.h  common.c  common.h  http.c  http.h  main.c  router.c  router.h  templates.c  templates.h  testing.c  testing.h
